--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -552,7 +552,7 @@ on property:sys.boot_completed=1
 
     # Enable ZRAM on boot_complete
     rm /data/unencrypted/zram_swap
-    swapon_all /vendor/etc/fstab.qcom
+    swapon_all
     write /proc/sys/vm/swappiness 100
 
     # Setup runtime cpusets
